--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center" class="img-circle">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Dharmayudha'putu<h1>
+      <h1>Dharmayudhaputu<h1>
           <p>I'm <span class="typed" data-typed-items="Student, Researcher, Developer, Analyst, Photographer"></span>
           </p>
           <div class="social-links">
